<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="Age">Age</string>
    <string name="skill">skill</string>
    <string name="Experience">Experience(in years)</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="comp_name">Company name</string>
    <string name="Id">Company Id</string>
    <string name="phone_no">phone no</string>
    <string name="title_activity_comp_menu">comp_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_work_sample">upload work sample</string>
    <string name="gender">Gender:-</string>


</resources>
