<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:padding="50dp"
        android:scrollbars="horizontal"
        tools:actionBarNavMode="standard"
        tools:context=".Data.signup_form2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="DuplicateIds">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#0E0C0B"
                android:textColorHint="#F88D07" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/Age"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/skill"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/Experience"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/username"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHint="#FB8C00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">


        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#1F2753"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="Female"
                android:textSize="24sp"
                android:layout_marginStart="2dp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="Male"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/upload_work_sample" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="283dp"
            android:layout_height="135dp"
            android:layout_alignRight="@+id/bt4"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/addphoto" />

        <Button
            android:id="@+id/b23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="Register"
            android:textSize="24sp" />


    </LinearLayout>
</ScrollView>

